infra/k8s/comments-depl.yaml
# This is a deployement file
apiVersion: apps/v1 # Deployment is inside this object apps/v1
kind: Deployment
metadata:
  name: comments-depl # Name of the deployment
spec:
  replicas: 1 # Number of replicas (replicas is the number of pods that we want to create running some particular image)
  selector: # The selector right here is saying that, take a look at all the different pods that are created with the name
    #  label app: posts
    matchLabels:
      app: comments # Match the label app: event-bus (This we refer as a label which is like a (key, value) pair)
  template: # This template is where we specify the exact configuration of a pod that we want this deploymnent to create
    metadata:
      labels: # We want the pod to have the label which is app: event-bus (Basically the template and the selector sections will work together)
        app: comments
    spec:
      containers: # Here the containers is an array
        - name: comments # The name of the container is event-bus
          image: muraliju981108/comments
          # image: muraliju981108/event-bus:0.0.5 # The image of the container is muraliju981108/event-bus which it has to run
          # The image of the container is muraliju981108/event-bus which it has to run and by default
          # it will use the latest tag (or) latest image
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Here the reason for writing the port as 4001 because our comments is running on 4001 (You can check in comments/index.js file)
      targetPort: 4001
