infra/k8s/posts-depl.yaml
# This is a deployement file
apiVersion: apps/v1 # Deployment is inside this object apps/v1
kind: Deployment
metadata:
  name: posts-depl # Name of the deployment
spec:
  replicas: 1 # Number of replicas (replicas is the number of pods that we want to create running some particular image)
  selector: # The selector right here is saying that, take a look at all the different pods that are created with the name
    #  label app: posts
    matchLabels:
      app: posts # Match the label app: posts (This we refer as a label which is like a (key, value) pair)
  template: # This template is where we specify the exact configuration of a pod that we want this deploymnent to create
    metadata:
      labels: # We want the pod to have the label which is app: posts (Basically the template and the selector sections will work together)
        app: posts
    spec:
      containers: # Here the containers is an array
        - name: posts # The name of the container is posts
          image: muraliju981108/posts
          # image: murali981/posts:0.0.5 # The image of the container is murali981/posts which it has to run
          # The image of the container is murali981/posts which it has to run and by default
          # it will use the latest tag (or) latest image
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Here the reason for writing the port as 4000 because our posts is running on 4000 port
      targetPort: 4000 # Here the reason for writing the port as 4000 because our posts is running on 4000 port
