infra/k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort # NodePort service goal is to expose the pods to the outside world
  selector:
    app: posts # By writing a selector of app: posts here we are telling the service to try all the different pods with a label of app: posts
    # and expose those pods to the outside world
  ports: # This is the list of ports that are going to be exposed to the outside world
    - name: posts
      protocol: TCP
      # Our posts service is listening on port 4000, So in the below we are saying that we want to open up the access on port 4000
      port: 4000
      targetPort: 4000
