infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: # This total annotations section is what going to help the ingress controller to understand that we are trying to feed some
    # routing rules to the ingress controller. The ingress controller is going to scan all the different objects (or) all the different
    # config files that we are throwing into our kubernetes cluster and it is going to try to find out the exact annotation as below
    kubernetes.io/ingress.class: nginx
spec:
  rules: # rules is going to be an array
    - host: posts.com # Ingress-Nginx is setup assuming that you might be hosting many different applications(apps) at different domains. So
      # the ingress controller is going to be able to understand that we are trying to host our posts app at posts.com domain
    - http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
